hphp/test/zend/good/ext/standard/tests/math/base_convert_error.php.expectf
*** Testing base_convert() : error conditions ***
Incorrect number of arguments

Warning: base_convert() expects exactly 3 parameters, 0 given in %s/base_convert_error.php on line 15

Warning: base_convert() expects exactly 3 parameters, 1 given in %s/base_convert_error.php on line 16

Warning: base_convert() expects exactly 3 parameters, 2 given in %s/base_convert_error.php on line 17

Warning: Invalid argument: Invalid frombase: 1 in %s/base_convert_error.php on line 18

Warning: Invalid argument: Invalid tobase: 37 in %s/base_convert_error.php on line 19
Incorrect input

Catchable fatal error: Object of class classA could not be converted to string in %s/base_convert_error.php on line 22
